[gd_scene load_steps=16 format=2]

[ext_resource path="res://tiles/world/stage_2/background/bullet_hell_bg.png" type="Texture" id=1]
[ext_resource path="res://3d/ShipVoxel.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Cutscene_Death_Ship.tres" type="Environment" id=3]
[ext_resource path="res://scenes/Cutscene_Death_Ship.gd" type="Script" id=4]
[ext_resource path="res://3d/ShipVoxel.png" type="Texture" id=5]
[ext_resource path="res://trans.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/shipEngine.wav" type="AudioStream" id=7]

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
flags_disable_ambient_light = true
albedo_texture = ExtResource( 5 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
flags_vertex_lighting = true
flags_disable_ambient_light = true
albedo_color = Color( 1, 0.811765, 0.0745098, 1 )

[sub_resource type="ParticlesMaterial" id=3]
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
linear_accel = 50.0
scale = 0.2
color = Color( 1, 0.878431, 0, 1 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
flags_vertex_lighting = true
flags_disable_ambient_light = true
albedo_color = Color( 1, 0.443137, 0.0745098, 1 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 2.0
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
linear_accel = 30.0
radial_accel = 30.0
scale = 0.8
color = Color( 1, 0.878431, 0, 1 )

[sub_resource type="Animation" id=1]
resource_name = "shipFall"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("ShipVoxel:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Transform( 1, 0, 0, 0, 0.913999, 0.405716, 0, -0.405716, 0.913999, 0, 6.04393, 15.8357 ), Transform( 1, 0, 0, 0, 0.913999, 0.405716, 0, -0.405716, 0.913999, 0, -1.82668, 3.12402 ), Transform( 1, 0, 0, 0, 0.913999, 0.405716, 0, -0.405716, 0.913999, 0, -3.43848, 3.12402 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "transition"
tracks/0/type = "value"
tracks/0/path = NodePath("trans:opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Cutscene_Death_Ship" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.78337, 0 )
script = ExtResource( 4 )

[node name="ShipVoxel" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.913999, 0.405716, 0, -0.405716, 0.913999, 0, 6.04393, 15.8357 )
cast_shadow = 0
mesh = ExtResource( 2 )
material/0 = SubResource( 2 )

[node name="Particles" type="Particles" parent="ShipVoxel"]
transform = Transform( 1, 0, 0, 0, 0.913999, -0.405716, 0, 0.405716, 0.913999, 2.63169, 3.25509, -0.403175 )
material_override = SubResource( 5 )
emitting = false
amount = 100
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )

[node name="Particles2" type="Particles" parent="ShipVoxel"]
transform = Transform( 1, 0, 0, 0, 0.913999, -0.405716, 0, 0.405716, 0.913999, 2.63169, 3.70717, -4.65244 )
material_override = SubResource( 7 )
emitting = false
amount = 100
explosiveness = 0.8
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 13.4408, 0, 0, 0, -1.62921e-07, -1, 0, 11.689, -1.90437e-06, 0, 0, 0 )
texture = ExtResource( 1 )

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform( 13.4408, 0, 0, 0, -1.62921e-07, -1, 0, 11.689, -1.90437e-06, 0, 0, 74.2024 )
texture = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="trans" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.995498, 12.0104, 22.1611 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.187051, 8.70844, 23.2403 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shipFall = SubResource( 1 )

[node name="transition" type="AnimationPlayer" parent="."]
anims/transition = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
pitch_scale = 0.85
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="transition" to="." method="_on_transition_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
